# grpc-cpp-bank-client-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: tests.yml
proto/: payment_service.proto
src/: client.cc  server.cc
src/db/: databaseInterface.h  postgres.cc  postgres.h
tests/: CMakeLists.txt  payment_service_tests.cc
